--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  margin: 0;
+  
   font-family: 'Outfit', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -52,6 +52,7 @@ h1 {
   border-radius: 25px;
   border: 1px solid rgba(255,255,255, 0.8);
   background: rgba(255,255,255, 0.1);
+  color: #f8f8f8;
 }
 
 ::placeholder{
@@ -86,11 +87,15 @@ h1 {
   display: flex;
   justify-content: space-evenly;
   text-align: center;
-  width: 100%;
+  width: 80%;
   margin: 1rem auto;
   padding: 1rem;
   border-radius: 12px;
   background-color: rgba(255,255,255, 0.2);
+  position:absolute; 
+  bottom:100px;
+  left:80px;
+  right: 80px;
 }
 
 .bold{
